--- a/projects/index.html
+++ b/projects/index.html
@@ -131,7 +131,7 @@
 </figure>
 
         <div class="card-body">
-          <h2 class="card-title text-lowercase">My Documentation</h2>
+          <h2 class="card-title text-lowercase">My Document</h2>
           <p class="card-text">Encompasses Data Analyst and Business Intelligence</p>
           <div class="row ml-1 mr-1 p-0">
           </div>
