--- a/projects/3_project/index.html
+++ b/projects/3_project/index.html
@@ -241,7 +241,7 @@
     -->
 
     <!-- Fallback to the original file -->
-    <img class="img-fluid rounded z-depth-1" src="/assets/img/19.gif" title="Thanks for Support">
+    <img class="img-fluid rounded z-depth-1" src="/assets/img/20a.png" title="Thanks for Support">
 
   </picture>
 
