--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                 <tr>
                   <th scope="row">Dec 22, 2022</th>
                   <td>
-                    I created my <a href="https://ajiprasetyo11.github.io" target="_blank" rel="noopener noreferrer">Personal Website!</a>
+                    I created my <a href="https://ajiprasetyo11.github.io" target="_blank" rel="noopener noreferrer">Website!</a>
  
                   </td>
                 </tr> 
