--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- Standard metadata -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="google-site-verification" content="SwPrFdywWNSQuFXJ7g_QR5P6xZo4o9_b_XCL2nM5oe8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Aji  Prasetyo</title>
     <meta name="author" content="Aji  Prasetyo" />
