--- a/projects/2_project/index.html
+++ b/projects/2_project/index.html
@@ -184,7 +184,7 @@
     -->
 
     <!-- Fallback to the original file -->
-    <img class="img-fluid rounded z-depth-1" src="/assets/img/19a.png" title="Welcome to My Website">
+    <img class="img-fluid rounded z-depth-1" src="/assets/img/24.png" title="Data Technology">
 
   </picture>
 
