--- a/projects/index.html
+++ b/projects/index.html
@@ -160,7 +160,7 @@
 </figure>
 
         <div class="card-body">
-          <h2 class="card-title text-lowercase">Data Technology</h2>
+          <h2 class="card-title text-lowercase">Data-Tech</h2>
           <p class="card-text">Anything involving Data Technology</p>
           <div class="row ml-1 mr-1 p-0">
           </div>
@@ -189,7 +189,7 @@
 </figure>
 
         <div class="card-body">
-          <h2 class="card-title text-lowercase">EdTech</h2>
+          <h2 class="card-title text-lowercase">Edu-Tech</h2>
           <p class="card-text">All things related to Education &amp; Technology</p>
           <div class="row ml-1 mr-1 p-0">
           </div>
