--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@
           </div>
 
           <div class="clearfix">
-            <p>Hello World! My name is Aji Prasetyo, I absolutely love to combine data analysis and data visualization capabilities with any type of industry. I love to create mini project that explains or demonstrate how to use said application in your everday life.</p>
+            <p>Hello World! My name is Aji Prasetyo, I'm a Data Enthusiast. I am an experienced data analyst. I possess expertise in data analysis and analytics to support intelligent decision-making. I am committed to continuously developing myself in a data-focused environment.</p>
 
-<p>I am currently learning SQL and Python. I'm always looking to collaborate related to any ideas involving the data tech industry. I'm looking for opportunities in Big Data, Business Analyst, Data Analyst, and Data Science.</p>
+<p>I am currently learning Artificial Intelligence & Machine Learning. I'm always looking to collaborate related to any ideas involving the tech industry. I'm looking for opportunities in Big Data, Business Intelligence, Data Analyst, and Data Science.</p>
 
 <p>Also, I've skills in managing data, structuring data with SQL, analyzing data, and visualizing data with Google Data Studio, Power BI, and Tableau.</p>
 
