--- a/index.html
+++ b/index.html
@@ -149,14 +149,14 @@
 <p>I am always looking for folks who are interested in aiding on ongoing or newly created projects.</p>
 <ul>
   <li>Contact me via email <b>ajibusiness11@gmail.com</b> if interested!</li>
-  <li>Some of the Ongoing mini-projects:
+  <!-- <li>Some of the Ongoing mini-projects:
     <ul>
       <li>Creating a dashboard for sales performance,</li>
       <li>Creating an infographic for visualization information,</li>
       <li>Creating storytelling with data.</li>
     </ul>
   </li>
-</ul>
+</ul> -->
 
 <p>If you have an idea and want to see if I’d be interested in helping out, please contact me!</p>
 
