--- a/index.html
+++ b/index.html
@@ -147,8 +147,11 @@
 <p>And, I'm a lifelong learner. I try to do my best in everything I do as a way to expressing my gratitude for all the blessings Allah SWT has given me throught my life. In the near future, I'm planning to build content useful for everyone.</p>
 
 <p>I am always looking for folks who are interested in aiding on ongoing or newly created projects.</p>
+
+<p>If you have an idea and want to see if I’d be interested in helping out, please contact me!</p>
+
 <ul>
-  <li>Contact me via email <b>ajibusiness11@gmail.com</b> if interested!</li>
+  <li>Contact me via email <b>ajibusiness11@gmail.com</b></li>
   <!-- <li>Some of the Ongoing mini-projects:
     <ul>
       <li>Creating a dashboard for sales performance,</li>
@@ -158,7 +161,7 @@
   </li>
 </ul> -->
 
-<p>If you have an idea and want to see if I’d be interested in helping out, please contact me!</p>
+
 
           </div>
 
