--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
 <p>And, I'm a lifelong learner. I try to do my best in everything I do as a way to expressing my gratitude for all the blessings Allah SWT has given me throught my life. In the near future, I'm planning to build content useful for everyone.</p>
 
-<p>I am always looking for folks who are interested in aiding on ongoing or newly created projects.</p>
+<!-- <p>I am always looking for folks who are interested in aiding on ongoing or newly created projects.</p> -->
 
 <p>If you have an idea and want to see if I’d be interested in helping out, please contact me!</p>
 
