--- a/index.html
+++ b/index.html
@@ -171,11 +171,11 @@
             <div class="table-responsive">
               <table class="table table-sm table-borderless"> 
                 <tr>
-                  <th scope="row">Dec 22, 2022</th>
+                  <th scope="row">Jan 01, 2025</th>
                   <td>
                     Looking to show appreciation? <a href="https://www.linkedin.com/in/ajiprasetyo11" target="_blank" rel="noopener noreferrer">Follow me!</a>
  
-                  </td>
+                  <!-- </td>
                 </tr> 
                 <tr>
                   <th scope="row">Dec 22, 2022</th>
@@ -187,21 +187,21 @@
                 <tr>
                   <th scope="row">Dec 12, 2022</th>
                   <td>
-                    Mini Project Data Analytics: <a href="https://github.com/ajiprasetyo11/Data-Visualization" target="_blank" rel="noopener noreferrer">Github</a>
+                    Mini Project Data Analytics: <a href="https://github.com/ajiprasetyo11/Data-Visualization" target="_blank" rel="noopener noreferrer">Github</a> -->
  
+                  </td>
+                </tr> 
+                <tr>
+                  <th scope="row">May 9, 2023</th>
+                  <td>
+                    My first 100 million at 23 years old.
+
                   </td>
                 </tr> 
                 <tr>
                   <th scope="row">Oct 6, 2022</th>
                   <td>
                     Graduated from <a href="https://stiami.ac.id/" target="_blank" rel="noopener noreferrer">Institut Ilmu Sosial dan Manajemen STIAMI</a>
-
-                  </td>
-                </tr> 
-                <tr>
-                  <th scope="row">Feb 16, 2021</th>
-                  <td>
-                    Participant IndiHome Business Case Competition
  
                   </td>
                 </tr> 
