--- a/projects/1_project/index.html
+++ b/projects/1_project/index.html
@@ -109,10 +109,10 @@
 <hr>
 <p>Some of these projects you can be found on <b>Github</b> or <b>Tableau Public.</b></p>
 <ul>
-  <li><a href="https://github.com/ajiprasetyo11/Data-Visualization/tree/main/Mini%20Project%20-%20Bike%20Buyers" target="_blank" rel="noopener noreferrer">Mini Project Bike Buyers</a></li>
-  <li><a href="https://github.com/ajiprasetyo11/Data-Visualization/tree/main/Mini%20Project%20-%20COVID-19" target="_blank" rel="noopener noreferrer">Mini Project Covid-19</a></li>
-  <li><a href="https://github.com/ajiprasetyo11/Data-Visualization/tree/main/Mini%20Project%20-%20Global%20Store" target="_blank" rel="noopener noreferrer">Mini Project Global Store</a></li>
-  <li><a href="https://public.tableau.com/app/profile/aji.prasetyo2344" target="_blank" rel="noopener noreferrer">All Data Visualization</a></li>
+  <li><a href="https://github.com/ajiprasetyo11/Sales-Product-Analysis" target="_blank" rel="noopener noreferrer">Sales Product Analysis</a></li>
+  <li><a href="https://github.com/ajiprasetyo11/Customer-Behavior-Observation-SQL" target="_blank" rel="noopener noreferrer">Customer Behavior Analysis</a></li>
+  <li><a href="https://github.com/ajiprasetyo11/Analysis-Sales-Profit" target="_blank" rel="noopener noreferrer">Sales & Profit Performance Analysis</a></li>
+  <li><a href="https://public.tableau.com/app/profile/aji.prasetyo2344" target="_blank" rel="noopener noreferrer">All Data Visualization</a></li> 
 </ul>
 
           </article>
