--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <div class="navbar-brand social">
             <a href="mailto:ajibusiness11@gmail.com" title="email"><i class="fas fa-envelope"></i></a>
             <a href="https://github.com/ajiprasetyo11" title="GitHub" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a>
-            <a href="https://www.linkedin.com/in/ajiprasetyo11" title="LinkedIn" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/ajiprass11" title="LinkedIn" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin"></i></a>
             <a href="https://www.twitter.com/datawithap" tittle="Twitter" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter"></i></a>
             
           </div>
@@ -215,7 +215,7 @@
             <div class="contact-icons">
             <a href="mailto:ajibusiness11@gmail.com" title="email"><i class="fas fa-envelope"></i></a>
             <a href="https://github.com/ajiprasetyo11" title="GitHub" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a>
-            <a href="https://www.linkedin.com/in/ajiprasetyo11" title="LinkedIn" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/ajiprass11" title="LinkedIn" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin"></i></a>
             <a href="https://www.twitter.com/datawithap" tittle="Twitter" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter"></i></a>
             
             </div>
